auto Go Faculty mode

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
         if (match) {
           // To provide good UX, set the input to the full name when a match is found
           departmentInput.value = match.name;
+          facultySearchButton.click();
         }
       });
     });
