--- a/index.html
+++ b/index.html
@@ -13,26 +13,74 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
-      background-color: #f0f2f5;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    #app-container {
+      background-color: #000000;
       width: 100%;
       max-width: 500px;
+      color: #e0e0e0;
     }
     .card {
-      background-color: white;
+      background-color: #1a1a1a;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      padding: 25px 30px;
+      background-color: #1a1a1a;
+      border: 1px solid #333;
+      background-color: #1a1a1a;
+      border: 1px solid #333;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      border: 1px solid #333;
+    }
+    .main-header {
+    .main-header {
+    .main-header {
+      text-align: center;
+      color: #007bff; /* Blue font as requested */
       margin-bottom: 20px;
+    }
+    .main-header p {
+      margin: 0.2em 0;
+      font-weight: 500;
+      line-height: 1.3;
+    }
+    .main-header .schedule-title {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+    @media (max-width: 400px) {
+      .main-header p {
+        font-size: 0.9rem;
+      }
+    }
+      text-align: center;
+      color: #007bff; /* Blue font as requested */
+      margin-bottom: 20px;
+      font-weight: 500;
+      line-height: 1.3;
+    }
+    .main-header .schedule-title {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+    @media (max-width: 400px) {
+      .main-header p {
+        font-size: 0.9rem;
+      }
+    }
+      text-align: center;
+      color: #007bff; /* Blue font as requested */
+      margin-bottom: 20px;
+      font-weight: 500;
+      line-height: 1.3;
+    }
+    .main-header .schedule-title {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+    @media (max-width: 400px) {
+      .main-header p {
+        font-size: 0.9rem;
+      }
     }
     #search-card {
       text-align: center;
-    }
-    #dashboard-title {
-      margin-top: 0;
     }
     .mode-toggle {
       display: flex;
